# CHADstack

./: .gitignore  CHADstack2.cabal  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  TODO.md  config.cbl  cow.cbl  run
app/: Main.hs
cgi-bin/: images  index.cgi
controllers/: anotherroute.cbl
pages/other_app/: index.html
pages/showsum/:value1/:value2/: index.html
src/: main.rs
views/: anotherroute.cow  showsum.cow
